--- a/app/src/main/res/layout/activity_info_student.xml
+++ b/app/src/main/res/layout/activity_info_student.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -6,57 +6,20 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="labprogra2.zerustudio.com.tareaandroid2.InfoStudentActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="No. Cuenta: "
-        android:id="@+id/lblNCuenta"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="No. Cuenta:"
-        android:id="@+id/txtNCuenta"
-        android:layout_toRightOf="@+id/lblNCuenta"
-        android:textSize="35px"/>
+    <fragment
+        android:id="@+id/infoFragments"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="match_parent"
+        class="labprogra2.zerustudio.com.tareaandroid2.InfoFragments"
+        tools:layout="@layout/info_layout"></fragment>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nombre: "
-        android:id="@+id/lblNname"
-        android:layout_below="@+id/txtNCuenta"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="No. Cuenta:"
-        android:id="@+id/txtName"
-        android:layout_toRightOf="@+id/lblNname"
-        android:layout_below="@+id/txtNCuenta"
-        android:textSize="35px"/>/>
+    <fragment
+        android:id="@+id/updateFragments"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="match_parent"
+        class="labprogra2.zerustudio.com.tareaandroid2.UpdateNotaFragments"
+        tools:layout="@layout/update_nota_layout"></fragment>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nota Final: "
-        android:id="@+id/lblNota"
-        android:layout_below="@+id/txtName"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="No. Cuenta:"
-        android:id="@+id/txtNota"
-        android:layout_toRightOf="@+id/lblNota"
-        android:layout_below="@id/txtName"
-        android:textSize="35px"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Actualizar Nota"
-        android:id="@+id/btnUpdateNota"
-        android:layout_below="@+id/txtNota"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="updateNata"/>/>
-
-</RelativeLayout>
+</LinearLayout>
